# trading

./: .gitignore  README.md  pyproject.toml
src/legacy/: ib_trader.py
src/trading/: __init__.py  config.py  manual_refresh_authen_token.py  trader.py
